shipper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: shipper-service
spec:
  ports:
  - port: 30001
    nodePort: 30001
    targetPort: http-port
    protocol: TCP
  selector:
    app: shipper
  type: NodePort
